Fix whitespace in calendar profile setup page

--- a/src/app/admin-setup/leave-setup/calendar-profile/calendar-profile.component.scss
+++ b/src/app/admin-setup/leave-setup/calendar-profile/calendar-profile.component.scss
@@ -8,7 +8,7 @@
   ion-card {
     height: 100%;
     margin: 0;
-    overflow-y: auto;
+    // overflow-y: auto;
   }
   .fullContainer {
     display: flex;
@@ -32,7 +32,7 @@
   .cardContent {
     line-height: 1.25;
     background: white;
-    height: calc(70vh - 60px); // calc(100% - 154px);
+    height: calc(100vh - 250px); // calc(100% - 154px);
     display: flex;
     flex-direction: column;
     margin-left: 20px;
@@ -54,7 +54,7 @@
     // max-width: 30%;
     // max-height: 100%;
     flex: 1;
-    max-height: calc(70vh - 60px);
+    max-height: calc(100vh - 250px); // calc(70vh - 60px);
     min-width: 200px;
   }
   .assigned {
@@ -66,7 +66,7 @@
     // max-width: 38.5%;
     // max-height: 100%;
     flex: 1.5;
-    max-height: calc(70vh - 60px);
+    max-height: calc(100vh - 250px); //calc(70vh - 60px);
     min-width: 200px;
     
   }
